refactoring replace constructor replace type to var