@@ -10,7 +10,7 @@ import java.io.IOException;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,6 +19,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 @Service
+@RequiredArgsConstructor
 public class CSVService {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(CSVService.class);
@@ -28,26 +29,17 @@ public class CSVService {
   @Autowired
   CSVHelper csvHelper;
 
-  public CSVService(
-      StockHistoryService stockHistoryService,
-      StockHistoryExtendService stockHistoryExtendService,
-      StockExtendHistoryFactory stockExtendHistoryFactory) {
-    this.stockHistoryService = stockHistoryService;
-    this.stockHistoryExtendService = stockHistoryExtendService;
-    this.stockExtendHistoryFactory = stockExtendHistoryFactory;
-  }
-
   public void transferData(MultipartFile file) {
     try {
       LOGGER.info("start to store csv data: {}", file.getName());
-      String stockName = CSVHelper.extractStockSymbol(file.getOriginalFilename());
+      var stockName = CSVHelper.extractStockSymbol(file.getOriginalFilename());
       stockHistoryService.deleteAll(stockName);
       stockHistoryExtendService.deleteAll(stockName);
-      List<StockHistory> listStockHistory = csvHelper.csvToStockHistory(stockName,
+      var listStockHistory = csvHelper.csvToStockHistory(stockName,
           file.getInputStream());
-      List<StockExtendHistory> listExt = convert(listStockHistory);
+      var listExt = convert(listStockHistory);
       stockHistoryService.saveAll(stockName, listStockHistory);
-      stockHistoryExtendService.saveAll(stockName,listExt);
+      stockHistoryExtendService.saveAll(stockName, listExt);
       clearStockSummaryCache();
 
     } catch (CsvParseException e) {
@@ -62,17 +54,19 @@ public class CSVService {
     LOGGER.info("start clearStockSummaryCache");
     // This method will remove all entries from the 'stockSummary' cache when called.
   }
-  private List<StockExtendHistory> convert(List<StockHistory> stockHistories)
-  {
-      return stockHistories.stream()
+
+  private List<StockExtendHistory> convert(List<StockHistory> stockHistories) {
+    return stockHistories.stream()
         .map(stockHistory -> {
-          BigDecimal normalize = stockHistory.getHighPrice().subtract(stockHistory.getLowPrice()).divide(stockHistory.getLowPrice(), 4, RoundingMode.HALF_UP);
-          StockExtendHistory stockExtendHistory=stockExtendHistoryFactory.createStockHistory(stockHistory.getClass() );
+          BigDecimal normalize = stockHistory.getHighPrice().subtract(stockHistory.getLowPrice())
+              .divide(stockHistory.getLowPrice(), 4, RoundingMode.HALF_UP);
+          StockExtendHistory stockExtendHistory = stockExtendHistoryFactory.createStockHistory(
+              stockHistory.getClass());
           stockExtendHistory.setDate(stockHistory.getDate());
           stockExtendHistory.setNormalize(normalize);
           return stockExtendHistory;
         })
-        .collect(Collectors.toList());
+        .toList();
   }
 
 
